--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@loomhq/loom-embed": "^1.2.8",
+    "@loomhq/loom-sdk": "^2.21.2",
     "next": "12.0.4",
     "react": "17.0.2",
     "react-dom": "17.0.2"
