--- a/package.json
+++ b/package.json
@@ -8,11 +8,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.6.0",
+    "@emotion/styled": "^11.6.0",
     "@loomhq/loom-embed": "^1.2.8",
     "@loomhq/loom-sdk": "^2.21.2",
+    "@mui/material": "^5.1.1",
+    "firebase": "^9.5.0",
     "next": "12.0.4",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-firebase-hooks": "^4.0.1",
+    "react-firebaseui": "^6.0.0"
   },
   "devDependencies": {
     "eslint": "7.32.0",
