--- a/package.json
+++ b/package.json
@@ -8,17 +8,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@egjs/flicking-plugins": "^4.2.2",
+    "@egjs/react-flicking": "^4.4.2",
     "@emotion/react": "^11.6.0",
     "@emotion/styled": "^11.6.0",
     "@loomhq/loom-embed": "^1.2.8",
     "@loomhq/loom-sdk": "^2.21.2",
+    "@mui/icons-material": "^5.1.1",
     "@mui/material": "^5.1.1",
     "firebase": "^9.5.0",
+    "firebase-functions": "^3.16.0",
     "next": "12.0.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-firebase-hooks": "^4.0.1",
-    "react-firebaseui": "^6.0.0"
+    "react-firebaseui": "^6.0.0",
+    "react-slick": "^0.28.1"
   },
   "devDependencies": {
     "eslint": "7.32.0",
