--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@loomhq/loom-sdk": "^2.21.2",
     "@mui/icons-material": "^5.1.1",
     "@mui/material": "^5.1.1",
+    "@mui/x-data-grid": "^5.1.0",
+    "autosuggest-highlight": "^3.2.0",
     "firebase": "^9.5.0",
     "firebase-functions": "^3.16.0",
     "next": "12.0.4",
